ISSUE-0108 review fixes: consume-aware nullable array reads and element-wise array gates
Finding 1 (element-typed E8001 at past-end reads instead of the
contextual target's nullable check): emitIndexRead now takes the read
site's contextual target type and yields the DEAL null past the end when
the target is Nullable(T) for a T[] element — the boxed read helpers for
primitives, the per-class nullable read for local C[] — instead of
raising the element-typed E8001 (spec §Bounds and nil behavior: the read
result is checked against the TARGET type; LuaJIT's check_nullable
accepts the nil). The target threads through every typed boundary site
(declaration initializer, assignment RHS, call parameter, return, class
field write, array-literal element, class-construction value and
default) via emitExpressionFor and a per-operand emitOperandsInOrder
overload; the materialization temporary type follows the emitted boxed
code shape (materializationTempType). Local-class array reads in === /
!== operand positions route through the boxed nil-semantics comparison
lowering exactly like the primitive reads.

Finding 2 (nominal wrapper-class gates instead of element-wise
validation): the (T | null)[] gates now accept a plain T[] wrapper —
copying into boxed or-null storage (O(n), mirroring check_array's
element-wise check_nullable(T) validation) — so a stored T[] reads back
into (T | null)[] like the reference. (C | null)[] maps to a DISTINCT
per-class $ArrayOrNull$<C> wrapper with its own gate (accepting the
plain C[] wrapper with shared Object[] storage), so a null-containing
(C | null)[] crossing a C[]-typed boundary fails the gate instead of
letting the null element cross unvalidated (the documented E8001-vs-E8003
storage-analog divergence).

Tests: 16 new jvm-nullable-slice fixtures (51 -> 67), every one through
the real frontend -> JvmBackend codegen -> javac -> java artifact
execution; 11 are cross-backend LuaJIT parity pins (past-end/nullable
target reads for all four primit